# Asio-exercise

./: .gitignore  CMakeLists.txt  Readme.md
00_EchoServer/: CMakeLists.txt  EchoServer.cpp  EchoServer.h
01_dayTime-Client/: CMakeLists.txt  dayTime-Client.cpp
02_block-TimeServer/: CMakeLists.txt  Time-Server.cpp
04_asynchronization-timeServer/: main.cpp
05_async_timeServer/: CMakeLists.txt  main.cpp
06_echo_server/: CMakeLists.txt  main.cpp
07_echo_client[sync]/: CMakeLists.txt  main.cpp
08_chat_room-server/: CMakeLists.txt  chat_message.h  jsonObj.cpp  main.cpp  msg_protocol.pb.cc  msg_protocol.pb.h  msg_protocol.proto  struct_header.cpp  struct_header.h
09_chat_room-client/: CMakeLists.txt  client.cpp
10_chat_room/client/: CMakeLists.txt
10_chat_room/server/: CMakeLists.txt  main.cpp
11_strand/: CMakeLists.txt  main.cpp
client/: CMakeLists.txt  client.cpp
client/inc/: chat_client.hpp
client/srcs/: chat_client.cpp
server/: CMakeLists.txt  main.cpp
server/inc/: chat_participant.hpp  chat_room.hpp  chat_server.hpp  chat_session.hpp
server/srcs/: chat_room.cpp  chat_server.cpp  chat_session.cpp
utils/: chat_message.cpp  chat_message.hpp  common.hpp  msg_format.pb.cc  msg_format.pb.h  msg_format.proto  msg_protocol_type.hpp
